--- a/src/scss/common/typography.scss
+++ b/src/scss/common/typography.scss
@@ -7,14 +7,30 @@ h6, .h6 {
 	font-family: $ff-title;
 	font-weight: $fw-bold;
 	line-height: $lh-title;
-	margin: 0 0 1rem
+	margin: 0;
 }
 
 h1, .h1 {
-	font-size: 32px;
+	background: $white-grad;
+	color: $white;
+	background-clip: text;
+	font-family: $ff-title;
+	font-size: 42px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 120%;
+	text-align: center;
+	-webkit-text-fill-color: transparent;
+	margin-bottom: 40px;
+
+	@media all and (min-width: 570px) {
+		text-align: left;
+	}
 
 	@media all and (min-width: $lg) {
-		font-size: 36px
+		font-size: 84px;
+		text-align: left;
+		margin-bottom: 0;
 	}
 }
 
@@ -48,20 +64,16 @@ h6, .h6 {
 
 a {
 	display: inline-block;
-	text-decoration: underline;
-	transition: color ease-out $tr;
+	text-decoration: none;
+	transition: opacity ease-out $tr;
 
 	&:hover {
-		text-decoration: none
+		opacity: $op;
 	}
 }
 
 p {
-	margin-top: 0;
-
-	&:last-of-type {
-		margin-bottom: 0
-	}
+	margin: 0;
 }
 
 b, strong {
