--- a/src/scss/common/vars.scss
+++ b/src/scss/common/vars.scss
@@ -9,10 +9,10 @@ $xxl: 1366px;
 // Container max-width.
 $container-md: 760px;
 $container-lg: 990px;
-$container-xl: 1200px;
+$container-xl: 1317px;
 
 // Container padding.
-$container-padding: 24px;
+$container-padding: 20px;
 
 // Font families.
 $ff			: 'Inter', sans-serif;
@@ -39,5 +39,10 @@ $lh-title	: 1.3;
 $white	: #FFFFFF;
 $black	: #000000;
 
+//Gradients
+$white-grad:  linear-gradient(107deg, #FFF 1.98%, rgba(255, 255, 255, 0.80) 78.58%);
+
 // Others.
 $tr: 0.35s;
+$op: 0.75;
+$border: 1px solid #1F2123; 
